Fix avatar position on mobile device

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,5 +1,5 @@
 #nav-avatar {
-    transform: translateX(-10px) translateY(-10px);
+    transform: translateX(5px) translateY(-5px);
     width: 45px;
     height: 45px;
     -webkit-border-radius: 45px;
